Styles applied for section-about. Overflow for the section-autor style was fixed.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
 
     <!-- Section 1: About Me -->
     <section class="section section-about" id="about">
-        <h1 class="section-greeting">Hi there! I'm</h1>
-        <p class="section-autor">Daniela Rodríguez</p>
-        <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
-        <button class="button">CHECK OUT MY WORK</button>
-        <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+        <div class="flex-container grid-container">
+            <h1 class="section-greeting">Hi there! I'm</h1>
+            <p class="section-autor">Daniela Rodríguez</p>
+            <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
+            <button class="btn btn-primary">Check out my work! 🩷</button>
+            <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+        </div>
     </section>
 
     <!-- Section 2: Skills -->
@@ -71,19 +73,19 @@
         <p>
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
-        <div class="flex-container">
-            <i class="devicon-html5-plain colored"></i>
-            <i class="devicon-css3-plain colored"></i>
-            <i class="devicon-sass-original colored"></i>
-            <i class="devicon-javascript-plain colored"></i>
-            <i class="devicon-react-original colored"></i>
-            <i class="devicon-git-plain colored"></i>
-            <i class="devicon-nodejs-plain colored"></i>
-            <i class="devicon-express-original colored"></i>
-            <i class="devicon-bootstrap-plain colored"></i>
-            <i class="devicon-handlebars-plain colored"></i>
-            <i class="devicon-heroku-plain colored"></i>
-            <i class="devicon-mongodb-plain colored"></i>
+        <div class="flex-container grid-container">
+            <i class="icon-skill devicon-html5-plain colored"></i>
+            <i class="icon-skill devicon-css3-plain colored"></i>
+            <i class="icon-skill devicon-sass-original colored"></i>
+            <i class="icon-skill devicon-javascript-plain colored"></i>
+            <i class="icon-skill devicon-react-original colored"></i>
+            <i class="icon-skill devicon-git-plain colored"></i>
+            <i class="icon-skill devicon-nodejs-plain colored"></i>
+            <i class="icon-skill devicon-express-original colored"></i>
+            <i class="icon-skill devicon-bootstrap-plain colored"></i>
+            <i class="icon-skill devicon-handlebars-plain colored"></i>
+            <i class="icon-skill devicon-heroku-plain colored"></i>
+            <i class="icon-skill devicon-mongodb-plain colored"></i>
         </div>
     </section>
 
