--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
 
     <!-- Section 1: About Me -->
     <section class="section section-about" id="about">
-        <div class="flex-container grid-container">
-            <h1 class="section-greeting">Hi there! I'm</h1>
-            <p class="section-autor">Daniela Rodríguez</p>
-            <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
+        <div class="grid-container">
+            <div class="grid-element-md2">
+                <h1 class="section-greeting">Hi there! I'm</h1>
+                <p class="section-autor">Daniela Rodríguez</p>
+                <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
+            </div>
+            <div class="grid-element-md2">
+                <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+            </div>
             <button class="btn btn-primary">Check out my work! 🩷</button>
-            <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+            
         </div>
     </section>
 
@@ -73,7 +78,7 @@
         <p>
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
-        <div class="flex-container grid-container">
+        <div class="grid-container">
             <i class="icon-skill devicon-html5-plain colored"></i>
             <i class="icon-skill devicon-css3-plain colored"></i>
             <i class="icon-skill devicon-sass-original colored"></i>
