--- a/index.html
+++ b/index.html
@@ -55,27 +55,20 @@
 
     <!-- Section 1: About Me -->
     <section class="section section-about" id="about">
-        <div class="grid-container">
-            <div class="grid-element-md2">
-                <h1 class="section-greeting">Hi there! I'm</h1>
-                <p class="section-autor">Daniela Rodríguez</p>
-                <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
-            </div>
-            <div class="grid-element-md2">
-                <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
-            </div>
-            <button class="btn btn-primary">Check out my work! 🩷</button>
-            
-        </div>
+        <h1 class="section-greeting">Hi there! I'm</h1>
+        <p class="section-autor">Daniela Rodríguez</p>
+        <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
+        <button class="btn btn-primary">CHECK OUT MY WORK 🩷</button>
+        <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
     </section>
 
     <!-- Section 2: Skills -->
-    <section id="skills">
-        <h1>My skills</h1>
-        <p>
+    <section class="section section-skills" id="skills">
+        <h1 class="section-title skills-title">My skills</h1>
+        <p class="section-description">
             I am currently taking a front-end development course, focusing on technologies oriented towards the design of web pages and their semantics.
         </p>
-        <p>
+        <p class="section-description">
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
         <div class="grid-container">
