--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
         <div class="grid-container">
-            <i class="icon-skill devicon-html5-plain colored"></i>
-            <i class="icon-skill devicon-css3-plain colored"></i>
-            <i class="icon-skill devicon-sass-original colored"></i>
-            <i class="icon-skill devicon-javascript-plain colored"></i>
-            <i class="icon-skill devicon-react-original colored"></i>
-            <i class="icon-skill devicon-git-plain colored"></i>
-            <i class="icon-skill devicon-nodejs-plain colored"></i>
-            <i class="icon-skill devicon-express-original colored"></i>
-            <i class="icon-skill devicon-bootstrap-plain colored"></i>
-            <i class="icon-skill devicon-handlebars-plain colored"></i>
-            <i class="icon-skill devicon-heroku-plain colored"></i>
-            <i class="icon-skill devicon-mongodb-plain colored"></i>
+            <i class="grid-item icon-skill devicon-html5-plain colored"></i>
+            <i class="grid-item icon-skill devicon-css3-plain colored"></i>
+            <i class="grid-item icon-skill devicon-sass-original colored"></i>
+            <i class="grid-item icon-skill devicon-javascript-plain colored"></i>
+            <i class="grid-item icon-skill devicon-react-original colored"></i>
+            <i class="grid-item icon-skill devicon-git-plain colored"></i>
+            <i class="grid-item icon-skill devicon-nodejs-plain colored"></i>
+            <i class="grid-item icon-skill devicon-express-original colored"></i>
+            <i class="grid-item icon-skill devicon-bootstrap-plain colored"></i>
+            <i class="grid-item icon-skill devicon-handlebars-plain colored"></i>
+            <i class="grid-item icon-skill devicon-heroku-plain colored"></i>
+            <i class="grid-item icon-skill devicon-mongodb-plain colored"></i>
         </div>
     </section>
 
