Created the styles for the quote. Added specifications such as text-shadow and color of the font for the quote an the author.

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
     </section>
 
     <!-- Quote interlude -->
-    <section id="quote">
+    <section class="section quote" id="quote">
         <blockquote>
-            <i class="fa-solid fa-quote-left"></i>
-            <p>Around here, however, we don't look backwards for very long. We keep moving forward, opening up new doors and doing new things... and curiosity keeps leading us down new paths.</p>
-            <i class="fa-solid fa-quote-right"></i>
+            <i class="fa-solid fa-quote-left quoting-left"></i>
+            <p class="quote-content">Around here, however, we don't look backwards for very long. We keep moving forward, opening up new doors and doing new things... and curiosity keeps leading us down new paths.</p>
+            <i class="fa-solid fa-quote-right quoting-right"></i>
         </blockquote>
-        <h3>- Walt Disney</h3>
+        <h3 class="section-autor quote-autor">- Walt Disney</h3>
     </section>
 
     <!-- Section 3: Projects -->
