--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <!-- Section 3: Projects -->
-    <section id="projects">
+    <section class="section section-projects" id="projects">
         <h1>My projects</h1>
         <p>Here are some of the projects I've been working on:</p>
         <div class="flex-container">
