Adding class flex-container, and element, that enables a container with elements flex that can be displayed in a row.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,17 @@
 
     <!-- Section 1: About Me -->
     <section class="section section-about" id="about">
-        <h1 class="section-greeting">Hi there! I'm</h1>
-        <p class="section-autor">Daniela Rodríguez</p>
-        <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
-        <button class="btn btn-primary">CHECK OUT MY WORK 🩷</button>
-        <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+        <div class="flex-container">
+            <div class="element-row">
+                <h1 class="section-greeting">Hi there! I'm</h1>
+                <p class="section-autor">Daniela Rodríguez</p>
+                <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
+                <button class="btn btn-primary">CHECK OUT MY WORK 🩷</button>
+            </div>
+            <div class="element-row">
+                <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+            </div>
+        </div>
     </section>
 
     <!-- Section 2: Skills -->
