Fixing the 'stylesheet' for devicon so the handlebars icon appears correctly.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/0bcce66b40.js" crossorigin="anonymous"></script>
 
     <!-- Icons for programming languages, designing, and development tools -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/img/favicomatic/apple-touch-icon-57x57.png" />
@@ -63,7 +63,7 @@
                 <button class="btn btn-primary">CHECK OUT MY WORK 🩷</button>
             </div>
             <div class="element-row">
-                <img src="/img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
+                <img src="./img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
             </div>
         </div>
     </section>
@@ -105,8 +105,8 @@
 
     <!-- Section 3: Projects -->
     <section class="section section-projects" id="projects">
-        <h1>My projects</h1>
-        <p>Here are some of the projects I've been working on:</p>
+        <h1 class="section-title">My projects</h1>
+        <p class="section-description">Here are some of the projects I've been working on:</p>
         <div class="flex-container">
             <img src="" alt="Portfolio">
             <img src="" alt="Meme generator">
