Adding styles for the grid (in skills section) items. Border, border color, padding, etc.

--- a/index.html
+++ b/index.html
@@ -78,18 +78,54 @@
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
         <div class="grid-container">
-            <i class="grid-item icon-skill devicon-html5-plain colored"></i>
-            <i class="grid-item icon-skill devicon-css3-plain colored"></i>
-            <i class="grid-item icon-skill devicon-sass-original colored"></i>
-            <i class="grid-item icon-skill devicon-javascript-plain colored"></i>
-            <i class="grid-item icon-skill devicon-react-original colored"></i>
-            <i class="grid-item icon-skill devicon-git-plain colored"></i>
-            <i class="grid-item icon-skill devicon-nodejs-plain colored"></i>
-            <i class="grid-item icon-skill devicon-express-original colored"></i>
-            <i class="grid-item icon-skill devicon-bootstrap-plain colored"></i>
-            <i class="grid-item icon-skill devicon-handlebars-plain colored"></i>
-            <i class="grid-item icon-skill devicon-heroku-plain colored"></i>
-            <i class="grid-item icon-skill devicon-mongodb-plain colored"></i>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-html5-plain colored"></i>
+                <p class="name-skill">HTML</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-css3-plain colored"></i>
+                <p class="name-skill">CSS</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-sass-original colored"></i>
+                <p class="name-skill">Sass</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-javascript-plain colored"></i>
+                <p class="name-skill">JavaScript</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-react-original colored"></i>
+                <p class="name-skill">React</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-git-plain colored"></i>
+                <p class="name-skill">Git</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-nodejs-plain colored"></i>
+                <p class="name-skill">NodeJS</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-express-original colored"></i>
+                <p class="name-skill">Express</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-bootstrap-plain colored"></i>
+                <p class="name-skill">Bootstrap</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-handlebars-plain colored"></i>
+                <p class="name-skill">Handlebars</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-heroku-plain colored"></i>
+                <p class="name-skill">Heroku</p>
+            </div>
+            <div class="grid-item grid-skill">
+                <i class="icon-skill devicon-mongodb-plain colored"></i>
+                <p class="name-skill">MongoDB</p>
+            </div>
         </div>
     </section>
 
