Modified styles for link visited and not visited

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h1 class="section-greeting">Hi there! I'm</h1>
                 <p class="section-autor">Daniela Rodríguez</p>
                 <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
-                <button class="btn btn-primary">CHECK OUT MY WORK 🩷</button>
+                <button type="button" class="btn btn-primary"><a href="https://github.com/daniela-rodga">CHECK OUT MY WORK </a> 🩷</button>
             </div>
             <div class="element-row">
                 <img src="./img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
