Changes to the hover of the section skills

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- Section 3: Projects -->
     <section class="section section-projects" id="projects">
-        <h1 class="section-title">My projects</h1>
+        <h1 class="section-title projects-title">My projects</h1>
         <p class="section-description">Here are some of the projects I've been working on:</p>
         <div class="flex-container">
             <img src="" alt="Portfolio">
