Added a grid for the Projects section. Include styles to each grid-item.

--- a/index.html
+++ b/index.html
@@ -78,51 +78,51 @@
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
         <div class="grid-container">
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-html5-plain colored"></i>
                 <p class="name-skill">HTML</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-css3-plain colored"></i>
                 <p class="name-skill">CSS</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-sass-original colored"></i>
                 <p class="name-skill">Sass</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-javascript-plain colored"></i>
                 <p class="name-skill">JavaScript</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-react-original colored"></i>
                 <p class="name-skill">React</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-git-plain colored"></i>
                 <p class="name-skill">Git</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-nodejs-plain colored"></i>
                 <p class="name-skill">NodeJS</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-express-original colored"></i>
                 <p class="name-skill">Express</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-bootstrap-plain colored"></i>
                 <p class="name-skill">Bootstrap</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-handlebars-plain colored"></i>
                 <p class="name-skill">Handlebars</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-heroku-plain colored"></i>
                 <p class="name-skill">Heroku</p>
             </div>
-            <div class="grid-item grid-skill">
+            <div class="grid-item grid">
                 <i class="icon-skill devicon-mongodb-plain colored"></i>
                 <p class="name-skill">MongoDB</p>
             </div>
@@ -143,16 +143,34 @@
     <section class="section section-projects" id="projects">
         <h1 class="section-title projects-title">My projects</h1>
         <p class="section-description">Here are some of the projects I've been working on:</p>
-        <div class="flex-container">
-            <img src="" alt="Portfolio">
-            <img src="" alt="Meme generator">
-            <img src="" alt="Match 3">
-            <img src="" alt="Expenses control">
-            <img src="" alt="Call scheduler">
-            <img src="" alt="To Do app">
-            <img src="" alt="Movie searcher">
-            <img src="" alt="Shopping Cart">
-            <img src="" alt="Notes app">
+        <div class="grid-container">
+            <div class="grid-item grid">
+                <img src="" alt="Portfolio Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Meme generator Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Match 3 Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Expenses control Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Call scheduler Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="To Do app Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Movie searcher Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Shopping Cart Project Image">
+            </div>
+            <div class="grid-item grid">
+                <img src="" alt="Notes app Project Image">
+            </div>
         </div>
     </section>
 
