Applying same classes for grid (skills) and grid (projects), renaming classes to do so. Adding the titles and images for the projects items

--- a/index.html
+++ b/index.html
@@ -80,51 +80,51 @@
         <div class="grid-container">
             <div class="grid-item grid">
                 <i class="icon-skill devicon-html5-plain colored"></i>
-                <p class="name-skill">HTML</p>
+                <p class="name-grid-item">HTML</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-css3-plain colored"></i>
-                <p class="name-skill">CSS</p>
+                <p class="name-grid-item">CSS</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-sass-original colored"></i>
-                <p class="name-skill">Sass</p>
+                <p class="name-grid-item">Sass</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-javascript-plain colored"></i>
-                <p class="name-skill">JavaScript</p>
+                <p class="name-grid-item">JavaScript</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-react-original colored"></i>
-                <p class="name-skill">React</p>
+                <p class="name-grid-item">React</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-git-plain colored"></i>
-                <p class="name-skill">Git</p>
+                <p class="name-grid-item">Git</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-nodejs-plain colored"></i>
-                <p class="name-skill">NodeJS</p>
+                <p class="name-grid-item">NodeJS</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-express-original colored"></i>
-                <p class="name-skill">Express</p>
+                <p class="name-grid-item">Express</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-bootstrap-plain colored"></i>
-                <p class="name-skill">Bootstrap</p>
+                <p class="name-grid-item">Bootstrap</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-handlebars-plain colored"></i>
-                <p class="name-skill">Handlebars</p>
+                <p class="name-grid-item">Handlebars</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-heroku-plain colored"></i>
-                <p class="name-skill">Heroku</p>
+                <p class="name-grid-item">Heroku</p>
             </div>
             <div class="grid-item grid">
                 <i class="icon-skill devicon-mongodb-plain colored"></i>
-                <p class="name-skill">MongoDB</p>
+                <p class="name-grid-item">MongoDB</p>
             </div>
         </div>
     </section>
@@ -145,31 +145,58 @@
         <p class="section-description">Here are some of the projects I've been working on:</p>
         <div class="grid-container">
             <div class="grid-item grid">
-                <img src="" alt="Portfolio Project Image">
+                <img src="./img/undraw_proud_coder_re_exuy.svg" alt="Portfolio Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Portfolio
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Meme generator Project Image">
+                <img src="./img/projects/undraw_online_discussion_re_nn7e.svg" alt="Meme generator Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Meme generator
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Match 3 Project Image">
+                <img src="./img/projects/undraw_gaming_re_cma2.svg" alt="Match 3 Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Match 3
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Expenses control Project Image">
+                <img src="./img/projects/undraw_savings_re_eq4w.svg" alt="Expenses control Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Expenses control
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Call scheduler Project Image">
+                <img src="./img/projects/undraw_calendar_re_ki49.svg" alt="Call scheduler Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Call scheduler
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="To Do app Project Image">
+                <img src="./img/projects/undraw_options_re_9vxh.svg" alt="To Do app Project Image" class="img-project">
+                <p class="name-grid-item">
+                    To-Do app
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Movie searcher Project Image">
+                <img src="./img/projects/undraw_contemplating_re_ynec.svg" alt="Movie searcher Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Movie searcher
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Shopping Cart Project Image">
+                <img src="./img/projects/undraw_shopping_bags_uvig.svg" alt="Shopping cart Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Shopping cart
+                </p>
             </div>
             <div class="grid-item grid">
-                <img src="" alt="Notes app Project Image">
+                <img src="./img/projects/undraw_new_ideas_re_asn4.svg" alt="Notes app Project Image" class="img-project">
+                <p class="name-grid-item">
+                    Notes app
+                </p>
             </div>
         </div>
     </section>
