Reduce the classes for the titles and concetrate it in just 1. Added the containers for the contact-me section.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Section 2: Skills -->
     <section class="section section-skills" id="skills">
-        <h1 class="section-title skills-title">My skills</h1>
+        <h1 class="section-title">My skills</h1>
         <p class="section-description">
             I am currently taking a front-end development course, focusing on technologies oriented towards the design of web pages and their semantics.
         </p>
@@ -141,7 +141,7 @@
 
     <!-- Section 3: Projects -->
     <section class="section section-projects" id="projects">
-        <h1 class="section-title projects-title">My projects</h1>
+        <h1 class="section-title">My projects</h1>
         <p class="section-description">Here are some of the projects I've been working on:</p>
         <div class="grid-container">
             <div class="grid-item grid">
@@ -204,8 +204,16 @@
     <!-- Section 4: Contact -->
     <section id="contact">
         <div class="flex-container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi modi accusamus eius iste dolorem! Beatae minima ullam dicta fuga laboriosam qui tempore adipisci dolores, dolore est obcaecati? Incidunt, similique reiciendis?</p>
-
+            <div class="element-row">
+                <div class="container-contact">
+                    <h1 class="section-title">Contact me</h1>
+                </div>
+            </div>
+            <div class="element-row">
+                <div class="container-contact">
+                    <h1 class="section-title">Send me a message</h1>
+                </div>
+            </div>
         </div>
     </section>
 
