--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </section>
 
     <!-- Section 4: Contact -->
-    <section id="contact">
+    <section class="section" id="contact">
         <div class="flex-container">
             <div class="element-row">
                 <div class="container-contact">
