Created and added the class 'section-contact' to only change the bacnground color of the section (by now) but its goign to include the padding and margins in the future

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </section>
 
     <!-- Section 4: Contact -->
-    <section class="section" id="contact">
+    <section class="section section-contact" id="contact">
         <div class="flex-container">
             <div class="element-row">
                 <div class="container-contact">
