Changes in the padding to look more alike the example provided by Ada

--- a/index.html
+++ b/index.html
@@ -203,15 +203,14 @@
 
     <!-- Section 4: Contact -->
     <section class="section section-contact" id="contact">
-        <div class="flex-container">
-            <div class="element-row">
-                <div class="container-contact">
+        <div class="container-contact">
+            <div class="flex-container">
+                <div class="element-row">
                     <h1 class="section-title">Contact me</h1>
+                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis perspiciatis quaerat porro sapiente nesciunt laboriosam quisquam pariatur recusandae quae!</p>
                 </div>
-            </div>
-            <div class="element-row">
-                <div class="container-contact">
-                    <h1 class="section-title">Send me a message</h1>
+                <div class="element-row">
+                        <h1 class="section-title">Send me a message</h1>
                 </div>
             </div>
         </div>
