Added social media links and icons. Defined the form structure but it's empty

--- a/index.html
+++ b/index.html
@@ -208,9 +208,27 @@
                 <div class="element-row">
                     <h1 class="section-title">Contact me</h1>
                     <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis perspiciatis quaerat porro sapiente nesciunt laboriosam quisquam pariatur recusandae quae!</p>
+                    <ul>
+                        <li>
+                            <a href="https://www.linkedin.com/in/danielarodga">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <span>Daniela Rodríguez García</span>
+                        </li>
+                        <li>
+                            <a href="mailto:danierodga@gmail.com">
+                                <i class="fa-solid fa-envelope"></i>
+                            </a>
+                            <span>danierodga@gmail.com</span>
+                        </li>
+                    </ul>
                 </div>
                 <div class="element-row">
                         <h1 class="section-title">Send me a message</h1>
+                        <form action="/message-send" method="POST">
+                            
+
+                        </form>
                 </div>
             </div>
         </div>
