--- a/index.html
+++ b/index.html
@@ -226,7 +226,22 @@
                 <div class="element-row">
                         <h1 class="section-title">Send me a message</h1>
                         <form action="/message-send" method="POST">
-                            
+                            <ul>
+                                <li>
+                                    <label for="first_name">First name:</label>
+                                    <input type="text" name="name" id="first_name">
+
+                                    <label for="last_name">Last name:</label>
+                                    <input type="text" name="name" id="last_name">
+                                </li>
+                                <li>
+                                    <label for="email">Email:</label>
+                                    <input type="email" name="user_email" id="email">
+                                </li>
+                                <li>
+                                    <label for=""></label>
+                                </li>
+                            </ul>
 
                         </form>
                 </div>
