Added classes for vertical and horizontal lists that are used for the contact and navbar modules of the site.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <ul>
+        <ul class="horizontal-list">
             <li><a href="#about">ABOUT ME</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#projects">PROJECTS</a></li>
@@ -208,7 +208,7 @@
                 <div class="element-row">
                     <h1 class="section-title">Contact me</h1>
                     <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis perspiciatis quaerat porro sapiente nesciunt laboriosam quisquam pariatur recusandae quae!</p>
-                    <ul>
+                    <ul class="vertical-list">
                         <li>
                             <a href="https://www.linkedin.com/in/danielarodga">
                                 <i class="fa-brands fa-linkedin"></i>
