Added the class 'social-media-name' for the username of social media profiles instead of using the tag span

--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
                             <a href="https://www.linkedin.com/in/danielarodga">
                                 <i class="fa-brands fa-linkedin"></i>
                             </a>
-                            <span>Daniela Rodríguez García</span>
+                            <p class="social-media-user">Daniela Rodríguez</p>
                         </li>
                         <li>
                             <a href="mailto:danierodga@gmail.com">
                                 <i class="fa-solid fa-envelope"></i>
                             </a>
-                            <span>danierodga@gmail.com</span>
+                            <p class="social-media-user">danierodga@gmail.com</p>
                         </li>
                     </ul>
                 </div>
