--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="element-row">
                         <h1 class="section-title">Send me a message</h1>
                         <form action="/message-send" method="POST">
-                            <ul>
+                            <ul class="vertical-list">
                                 <li>
                                     <label for="first_name">First name:</label>
                                     <input type="text" name="name" id="first_name">
@@ -239,7 +239,8 @@
                                     <input type="email" name="user_email" id="email">
                                 </li>
                                 <li>
-                                    <label for=""></label>
+                                    <label for="message-content">Message:</label>
+                                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
                                 </li>
                             </ul>
 
