--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         <div class="container-contact">
             <div class="flex-container">
                 <div class="element-row">
-                    <h1 class="section-title">Contact me</h1>
-                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis perspiciatis quaerat porro sapiente nesciunt laboriosam quisquam pariatur recusandae quae!</p>
+                    <h1 class="section-title contact-title">Contact me</h1>
+                    <p class="section-description contact-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis perspiciatis quaerat porro sapiente nesciunt laboriosam quisquam pariatur recusandae quae!</p>
                     <ul class="vertical-list">
                         <li>
                             <a href="https://www.linkedin.com/in/danielarodga">
@@ -224,7 +224,7 @@
                     </ul>
                 </div>
                 <div class="element-row">
-                        <h1 class="section-title">Send me a message</h1>
+                        <h1 class="section-title contact-title">Send me a message</h1>
                         <form action="/message-send" method="POST">
                             <ul class="vertical-list">
                                 <li>
