Centered the icon of the social media in  the contact section. Also added transitions and transitions durations and triggered transiotions when hovering one element.

--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
                     <ul class="vertical-list">
                         <li>
                             <a href="https://www.linkedin.com/in/danielarodga">
-                                <i class="fa-brands fa-linkedin"></i>
+                                <i class="fa-brands fa-linkedin-in social-media-icon"></i>
+                                <p class="social-media-user">Daniela Rodríguez</p>
                             </a>
-                            <p class="social-media-user">Daniela Rodríguez</p>
                         </li>
                         <li>
                             <a href="mailto:danierodga@gmail.com">
-                                <i class="fa-solid fa-envelope"></i>
+                                <i class="fa-solid fa-envelope social-media-icon"></i>
                             </a>
                             <p class="social-media-user">danierodga@gmail.com</p>
                         </li>
