--- a/index.html
+++ b/index.html
@@ -209,18 +209,22 @@
                     <h1 class="section-title contact-title">Contact me</h1>
                     <p class="section-description contact-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis perspiciatis quaerat porro sapiente nesciunt laboriosam quisquam pariatur recusandae quae!</p>
                     <ul class="vertical-list">
-                        <li>
-                            <a href="https://www.linkedin.com/in/danielarodga">
-                                <i class="fa-brands fa-linkedin-in social-media-icon"></i>
-                                <p class="social-media-user">Daniela Rodríguez</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mailto:danierodga@gmail.com">
-                                <i class="fa-solid fa-envelope social-media-icon"></i>
-                            </a>
-                            <p class="social-media-user">danierodga@gmail.com</p>
-                        </li>
+                        <div class="flex-container">
+                            <li>
+                                <a href="https://www.linkedin.com/in/danielarodga" target="_blank" class="social-media-link">
+                                    <i class="fa-brands fa-linkedin-in social-media-icon"></i>
+                                    <p class="social-media-user">Daniela Rodríguez</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-container">
+                            <li>
+                                <a href="mailto:danierodga@gmail.com" target="_blank" class="social-media-link">
+                                    <i class="fa-solid fa-envelope social-media-icon"></i>
+                                    <p class="social-media-user">danierodga@gmail.com</p>
+                                </a>
+                            </li>
+                        </div>
                     </ul>
                 </div>
                 <div class="element-row">
