Created the classes for the navigation bar. Added the padding and shadow necessary for this assessment.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav>
+    <nav class="navbar">
         <ul class="horizontal-list">
             <li><a href="#about">ABOUT ME</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#projects">PROJECTS</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li class="navbar-item-primary"><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
 
