Adjusted the padding form bottom and top sides of the navbar, and also included the transition for the secondary items

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <!-- Navbar -->
     <nav class="navbar">
         <ul class="horizontal-list">
-            <li><a href="#about">ABOUT ME</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#projects">PROJECTS</a></li>
+            <li class="navbar-item-secondary"><a href="#about">ABOUT ME</a></li>
+            <li class="navbar-item-secondary"><a href="#skills">SKILLS</a></li>
+            <li class="navbar-item-secondary"><a href="#projects">PROJECTS</a></li>
             <li class="navbar-item-primary"><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
