--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h1 class="section-greeting">Hi there! I'm</h1>
                 <p class="section-autor">Daniela Rodríguez</p>
                 <p class="section-description">Front-End Developer, Support Engineer for Braintree and passionate about mentorship</p>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/daniela-rodga" target="_blank">CHECK OUT MY WORK </a> 🩷</button>
+                <button type="button" class="btn"><a href="https://github.com/daniela-rodga" target="_blank" class="btn-primary">CHECK OUT MY WORK </a> 🩷</button>
             </div>
             <div class="element-row">
                 <img src="./img/undraw_proud_coder_re_exuy.svg" alt="unDraw Proud Coder" class="section-image">
@@ -71,10 +71,10 @@
     <!-- Section 2: Skills -->
     <section class="section section-skills" id="skills">
         <h1 class="section-title">My skills</h1>
-        <p class="section-description">
+        <p class="section-description skills-description">
             I am currently taking a front-end development course, focusing on technologies oriented towards the design of web pages and their semantics.
         </p>
-        <p class="section-description">
+        <p class="section-description skills-description">
             In the past, I have been approached with server-side tools for personal projects and assessments.
         </p>
         <div class="grid-container">
