Modification of the padding for the description of the section Projects. Aldo deleted the '-' symbol in the quote author

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
             <p class="quote-content">Around here, however, we don't look backwards for very long. We keep moving forward, opening up new doors and doing new things... and curiosity keeps leading us down new paths.</p>
             <i class="fa-solid fa-quote-right quoting-right"></i>
         </blockquote>
-        <h3 class="section-autor quote-autor">- Walt Disney</h3>
+        <h3 class="section-autor quote-autor">Walt Disney</h3>
     </section>
 
     <!-- Section 3: Projects -->
     <section class="section section-projects" id="projects">
         <h1 class="section-title">My projects</h1>
-        <p class="section-description">Here are some of the projects I've been working on:</p>
+        <p class="section-description projects-description">Here are some of the projects I've been working on: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, nihil!</p>
         <div class="grid-container">
             <div class="grid-item grid">
                 <img src="./img/undraw_proud_coder_re_exuy.svg" alt="Portfolio Project Image" class="img-project">
