Re-distribuiting the list items of the contact-me form

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <p class="quote-content">Around here, however, we don't look backwards for very long. We keep moving forward, opening up new doors and doing new things... and curiosity keeps leading us down new paths.</p>
             <i class="fa-solid fa-quote-right quoting-right"></i>
         </blockquote>
-        <h3 class="section-autor quote-autor">Walt Disney</h3>
+        <h3 class="section-autor quote-autor">- Walt Disney</h3>
     </section>
 
     <!-- Section 3: Projects -->
@@ -233,10 +233,11 @@
                             <ul class="vertical-list">
                                 <li>
                                     <label for="first_name">First name:</label>
-                                    <input type="text" name="name" id="first_name">
-
+                                    <input type="text" name="full_name" id="first_name">                            
+                                </li>
+                                <li>
                                     <label for="last_name">Last name:</label>
-                                    <input type="text" name="name" id="last_name">
+                                    <input type="text" name="full_name" id="last_name">
                                 </li>
                                 <li>
                                     <label for="email">Email:</label>
