--- a/index.html
+++ b/index.html
@@ -229,23 +229,34 @@
                 </div>
                 <div class="element-row">
                         <h1 class="section-title contact-title">Send me a message</h1>
-                        <form action="/message-send" method="POST">
+                        <form action="/message-send" method="POST" class="contact-form">
                             <ul class="vertical-list">
-                                <li>
-                                    <label for="first_name">First name:</label>
-                                    <input type="text" name="full_name" id="first_name">                            
+                                <div class="flex-container">
+                                    <div class="element-row">
+                                        <li class="form-item">
+                                            <label for="first_name" class="form-label">First name *</label>
+                                            <input type="text" name="full_name" id="first_name" class="form-input" placeholder="e. g.: Daniela">                          
+                                        </li>
+                                    </div>
+                                    <div class="element-row">
+                                        <li class="form-item">
+                                            <label for="last_name" class="form-label">Last name *</label>
+                                            <input type="text" name="full_name" id="last_name" class="form-input" placeholder="e. g.: Rodríguez">
+                                        </li>
+                                    </div>
+                                </div>
+                                <li class="form-item">
+                                    <label for="email" class="form-label">Email *</label>
+                                    <input type="email" name="user_email" id="email" class="form-input" placeholder="e. g.: danierodga@gmail.com">
                                 </li>
-                                <li>
-                                    <label for="last_name">Last name:</label>
-                                    <input type="text" name="full_name" id="last_name">
+                                <li class="form-item">
+                                    <label for="message-content" class="form-label">Message *</label>
+                                    <textarea name="message" id="message" cols="30" rows="10" class="form-textarea">Escriba un mensaje aquí</textarea>
                                 </li>
-                                <li>
-                                    <label for="email">Email:</label>
-                                    <input type="email" name="user_email" id="email">
-                                </li>
-                                <li>
-                                    <label for="message-content">Message:</label>
-                                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                                <li class="form-item">
+                                    <button type="button" class="btn">
+                                        <a href="mailto:danierodga@gmail.com" class="btn-primary">ENVIAR</a>
+                                    </button>
                                 </li>
                             </ul>
 
