--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 </li>
                                 <li class="form-item">
                                     <label for="message-content" class="form-label">Message *</label>
-                                    <textarea name="message" id="message" cols="30" rows="10" class="form-textarea">Escriba un mensaje aquí</textarea>
+                                    <textarea name="message" id="message" cols="30" rows="10" class="form-textarea" placeholder="Type your message here"></textarea>
                                 </li>
                                 <li class="form-item">
                                     <button type="button" class="btn">
