--- a/index.html
+++ b/index.html
@@ -235,23 +235,23 @@
                                     <div class="element-row">
                                         <li class="form-item">
                                             <label for="first_name" class="form-label">First name *</label>
-                                            <input type="text" name="full_name" id="first_name" class="form-input" placeholder="e. g.: Daniela">                          
+                                            <input type="text" name="full_name" id="first_name" class="form-input" placeholder="e. g.: Daniela" required>                          
                                         </li>
                                     </div>
                                     <div class="element-row">
                                         <li class="form-item">
                                             <label for="last_name" class="form-label">Last name *</label>
-                                            <input type="text" name="full_name" id="last_name" class="form-input" placeholder="e. g.: Rodríguez">
+                                            <input type="text" name="full_name" id="last_name" class="form-input" placeholder="e. g.: Rodríguez" required>
                                         </li>
                                     </div>
                                 </div>
                                 <li class="form-item">
                                     <label for="email" class="form-label">Email *</label>
-                                    <input type="email" name="user_email" id="email" class="form-input" placeholder="e. g.: danierodga@gmail.com">
+                                    <input type="email" name="user_email" id="email" class="form-input" placeholder="e. g.: danierodga@gmail.com" required>
                                 </li>
                                 <li class="form-item">
                                     <label for="message-content" class="form-label">Message *</label>
-                                    <textarea name="message" id="message" cols="30" rows="10" class="form-textarea" placeholder="Type your message here"></textarea>
+                                    <textarea name="message" id="message" cols="30" rows="10" class="form-textarea" placeholder="Type your message here" required></textarea>
                                 </li>
                                 <li class="form-item">
                                     <button type="button" class="btn">
