Added the styles when typing on the form-inputs/textarea's. Deleted the outline by default.

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
                                         <li class="form-item">
                                             <label for="first_name" class="form-label">First name *</label>
                                             <input type="text" name="full_name" id="first_name" class="form-input" placeholder="e. g.: Daniela" required>                          
+                                            <!-- <i class="fa-regular fa-circle-check" aria-hidden="true"></i>
+                                            <i class="fa-regular fa-circle-xmark" aria-hidden="true"></i> -->
+
                                         </li>
                                     </div>
                                     <div class="element-row">
