Added the classes for the social media links and icons for the footer. Trying to get the containers in a column.

--- a/index.html
+++ b/index.html
@@ -211,6 +211,22 @@
                     <ul class="vertical-list">
                         <div class="flex-container">
                             <li>
+                                <a href="https://www.twitter.com/Daany_Ro" target="_blank" class="social-media-link">
+                                    <i class="fa-brands fa-twitter social-media-icon"></i>
+                                    <p class="social-media-user">@Daany_Ro</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-container">
+                            <li>
+                                <a href="https://www.discordapp.com/users/Daniela Rodríguez#7616" target="_blank" class="social-media-link">
+                                    <i class="fa-brands fa-discord social-media-icon"></i>
+                                    <p class="social-media-user">Daniela Rodríguez</p>
+                                </a>
+                            </li>
+                        </div>
+                        <div class="flex-container">
+                            <li>
                                 <a href="https://www.linkedin.com/in/danielarodga" target="_blank" class="social-media-link">
                                     <i class="fa-brands fa-linkedin-in social-media-icon"></i>
                                     <p class="social-media-user">Daniela Rodríguez</p>
@@ -270,8 +286,30 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer-flex">
+        <ul class="horizontal-list">
+            <li class="footer-nav-item"><a href="#about">ABOUT ME</a></li>
+            <li class="footer-nav-item"><a href="#skills">SKILLS</a></li>
+            <li class="footer-nav-item"><a href="#projects">PROJECTS</a></li>
+            <li class="footer-nav-item"><a href="#contact">CONTACT</a></li>
+        </ul>
+        <ul class="horizontal-list">
+            <li>
+                <a href="https://www.twitter.com/Daany_Ro" target="_blank" class="fo-social-media-link">
+                <i class="fa-brands fa-twitter fo-social-media-icon"></i>
+                </a>
+            </li>
+            <li>
 
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+        </ul>
+           
     </footer>
 </body>
 </html>
